2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/pcidump.c: Remove static variables.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/sleep.c: Refresh screen before sleeping.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Move delimiter after the infos.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/bus/usb/usbhub.c: Fix recheck logic.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkfont.c (write_font_ascii_bitmap): Fix handling of glyphs
	not filling whole 8x16 space.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (bidi_line_wrap): Fix spurios warning.

2013-07-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Indicate which liblzma is used if any.

2013-06-21  Paul Wise  <pabs3@bonedaddy.net>
2013-06-21  Craig Sanders <savannah@taz.net.au>

	* util/grub-reboot.in: Document submenu usage.

2013-06-25  Colin Watson  <cjwatson@ubuntu.com>

	* .bzrignore: Update with a number of new test-related files.

2013-06-25  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-script-check.c: Fail on scripts containing no
	commands, to guard against corrupted grub-mkconfig setups that
	produce no useful output.
	* tests/grub_script_no_commands.in: New test.
	* Makefile.util.def (grub_script_no_commands): Add.
	Reported by Hans Putter.  Fixes Debian bug #713886.

2013-06-16  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/disk/diskfilter.c: Forgot to remove comment
	from previous commit.

2013-06-16  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/term/gfxterm.c (grub_virtual_screen_setup): Use
	grub_term_normal_color, do not hardcode GRUB_TERM_DEFAULT_NORMAL_COLOR.

2013-06-16  Andrey Borzenkov <arvidjaar@gmail.com>

	* conf/Makefile.extra-dist: Add grub-core/fs/cpio_common.c.

2013-06-16  Andrey Borzenkov <arvidjaar@gmail.com>

	* grub-core/disk/diskfilter.c (scan_devices): Iteratively