@@ -1407,15 +1407,16 @@ generate_image (const char *dir, const char *prefix,
       /* fwstart.img is the only part which can't be tested by using *-elf
 	 target. Check it against the checksum. */
       const grub_uint8_t yeeloong_fwstart_good_hash[512 / 8] = 
-	{ 
-	  0x11, 0x7f, 0xfd, 0x7e, 0xd9, 0xbb, 0x82, 0xe7,
-	  0x5f, 0xcc, 0xbf, 0x09, 0x1d, 0xfe, 0xfa, 0xd5,
-	  0x97, 0xfb, 0xbb, 0xd8, 0x76, 0x4b, 0xfc, 0x0a,
-	  0x4e, 0x3c, 0x91, 0x06, 0x98, 0xa0, 0xe0, 0xda,
-	  0x4f, 0x74, 0x17, 0x6f, 0x95, 0xd2, 0xec, 0x1b,
-	  0x7f, 0x12, 0x80, 0x23, 0xcb, 0xa0, 0x2d, 0x59,
-	  0x15, 0x82, 0x70, 0x3d, 0x23, 0xbf, 0xee, 0x93,
-	  0x5e, 0x5c, 0xbd, 0x1c, 0x51, 0x0b, 0x0b, 0x45 };
+	{
+	  0x5f, 0x67, 0x46, 0x57, 0x31, 0x30, 0xc5, 0x0a,
+	  0xe9, 0x98, 0x18, 0xc9, 0xf3, 0xca, 0x45, 0xa5,
+	  0x75, 0x64, 0x6b, 0xbb, 0x24, 0xcd, 0xb4, 0xbc,
+	  0xf2, 0x3e, 0x23, 0xf9, 0xc2, 0x6a, 0x8c, 0xde,
+	  0x3b, 0x94, 0x9c, 0xcc, 0xa5, 0xa7, 0x58, 0xb1,
+	  0xbe, 0x8b, 0x3d, 0x73, 0x98, 0x18, 0x7e, 0x68,
+	  0x5e, 0x5f, 0x23, 0x7d, 0x7a, 0xe8, 0x51, 0xf7,
+	  0x1a, 0xaf, 0x2f, 0x54, 0x11, 0x2e, 0x5c, 0x25
+	};
       const grub_uint8_t fuloong2f_fwstart_good_hash[512 / 8] = 
 	{ 
 	  0x76, 0x9b, 0xad, 0x6e, 0xa2, 0x39, 0x47, 0x62,
